--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!-- <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script> -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <meta name="description" content="Web site created using create-react-app" />
     <title>React App</title>
   </head>
